# aws-cli-nlp

./: .gitignore  CHANGELOG.md  LICENSE  MARKETPLACE_README.md  README.md  aws-nlp.bat  aws-nlp.py  conftest.py  install.sh  org-policy.example.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml
docs/: FROZEN_SCHEMA.md  MCP_MARKETPLACE_COMPLIANCE.md  PARSER_MIGRATION_GUIDE.md  PHASE_B2_EXECUTION.md  PHASE_B2_HARDENING.md  PHASE_B2_SUMMARY.md  PHASE_B3_CLI_UX.md  PHASE_B3_SUMMARY.md  RELEASE_TEMPLATE.md  VERSIONING.md
marketplace/: DESCRIPTION.md  PERMISSIONS.md  QUICK_REFERENCE.md  README.md  demo.py
scripts/: add_service_template.py  run_all_services.py  run_smoke_tests.py  test_cli_ux.py  test_hardening.py  test_phase3.py  test_s3.py  test_safety_classification.py
src/: aws_nlp.py  license_validator.py  mcp_server.py
src/cli/: ci.py  dry_run.py  policy_guard.py  prompt.py
src/config/: secrets.py  settings.py
src/core/: _template_service.py  aws_validator.py  base_parser.py  cli_formatter.py  clipboard.py  command_generator.py  execution_engine.py  executor.py  hardening.py  history.py  logging_utils.py  nlp_utils.py  registry.py  response_schema.py  telemetry.py
src/parsers/: MIGRATION_GUIDE.md  __init__.py
src/pro/: README.md  enforcement.py  policy_loader.py  policy_schema.py
tests/unit/: test_ci_exit_codes.py  test_cli_copy.py  test_cli_copy_json_and_explain.py  test_cli_execute_instruction.py  test_dynamodb_parser.py  test_ec2_parser.py  test_history_filters_and_no_prompt.py  test_iam_parser.py  (+9 more)
(+42 files in other folders)
