[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-cli-nlp"
version = "0.1.0"
description = "Generate AWS CLI commands from plain English with built-in safety checks"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=0.1.0",
    "loguru>=0.7.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "pyperclip>=1.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=24.3",
    "isort>=5.12",
    "flake8>=6.1",
]

[project.scripts]
aws-nlp = "src.aws_nlp:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
